--- a/backend/composer.json
+++ b/backend/composer.json
@@ -4,8 +4,8 @@
     "require": {
         "php": ">=7.2.5",
         "ext-ctype": "*",
-        "ext-iconv": "*",
         "ext-json": "*",
+        "ext-iconv": "*",
         "composer/package-versions-deprecated": "1.11.99.1",
         "doctrine/doctrine-bundle": "^2.2",
         "doctrine/doctrine-migrations-bundle": "^3.0",
@@ -67,6 +67,9 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "symfony/browser-kit": "5.1.*",
+        "symfony/css-selector": "5.1.*",
+        "symfony/phpunit-bridge": "^5.2",
         "symfony/stopwatch": "^5.1",
         "symfony/twig-bundle": "^5.1",
         "symfony/web-profiler-bundle": "^5.1"
